--- a/pro2/pro2.css
+++ b/pro2/pro2.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #242E1F; 
+    background-color: #313b2c; 
     color: white;
 }
 .items{
@@ -126,31 +126,150 @@ justify-content: space-around;
 .container1{
     display: flex;
 border-top: solid white 1px;
-margin-left: 20px;
-margin-right: 50px;
+margin-left: 40px;
+margin-right: 100px;
 justify-content: flex-end;
 font-size: 15px;
 padding-top: 20px;
+
 }
 .section{
     display: flex;
     justify-content: flex-start;
+    
 }
 .section1{
     display: flex;
     justify-content: flex-end;
+    padding-right: 25px;
 }
 .container2{
     display: flex;
     font-size: 10px;
-    margin-top: -40px;
-    margin-left: 30px;
+    margin-top: -45px;
+    margin-left: 35px;
+    
+   
     
 
 }
 .box9{
     display: flex;
     width: 200px;
-    padding-left: 30px;
-    padding-top: 30px;
+    padding-left: 35px;
+    padding-top: 40px;
+    
+   
+    
 }
+.container3{
+display: flex;
+margin-top: 30px;
+justify-content: space-around;
+margin-top: -50px;
+
+
+}
+.box10{
+    display: flex;
+    justify-content: space-around;
+    margin-top: -120px;
+    font-size: 10px;
+    margin-left: 320px;
+}
+.box11{
+    text-decoration: underline;
+}
+.box12{
+    margin-left: 200px;
+    margin-top: -120px;
+}
+.box13{
+    text-decoration: underline;
+    margin-bottom: 100px;
+    
+}
+.container7{
+    padding-top: 20px;
+    border-top: solid white 1px;
+    display: flex;
+    margin-left: -320px;
+
+}
+.container8{
+    margin-top: -30px;
+    margin-left: 40px ;
+    font-size: 15px;
+}
+.pic{
+ margin-left: -320px;
+}
+.container9{
+    margin-top: -220px;
+    margin-left: 39px;
+    margin-bottom: 30px;
+}
+.container10{
+    border: solid white 1px;
+    height: 40px;
+    width: 170px;
+    background-color:rgb(241, 247, 247);
+    color: black;
+    margin-left: 35px;
+    padding-top: 12px;
+    padding-left: 25px;
+    cursor: pointer;
+    margin-bottom: 150px;
+
+}
+.container11{
+    border-top: solid white 1px;
+    padding-top: 20px;
+    margin-left: -320px;
+}
+.container12{
+    display: flex;
+    margin-left: -320px;
+    gap: 12px;
+    margin-bottom: 20px;
+    margin-top: 15px;
+}
+.container13{
+    display: flex;
+    margin-left: -320px;
+    gap: 50px;
+    margin-bottom: 60px;
+    
+}
+.container14{
+    
+    margin-top: 40px;
+    margin-bottom: 60px;
+    font-size: 15px;  
+    font-family: ruda;
+  }
+    .container15{
+        background-color: beige;
+        margin-top: -15px;
+        width: 1px;
+        font-size: 10px;
+        height: 35px;
+        width: 180px;
+    color: black;
+    padding: 15px 15px;
+    margin-right: 100px;
+    gap: 20px;
+    margin-bottom: 25px;
+    
+    
+    }
+    .container16{
+        padding: 10px 10px;
+        font-size: 10px;
+        background-color: black;
+        color: white;
+        width: 70px;
+        margin-left: 185px;
+        margin-top: -60px;
+        
+    }
