--- a/pro2/pro2.css
+++ b/pro2/pro2.css
@@ -20,6 +20,7 @@ body{
     justify-content: center;
     display: flex;
     margin-top: -20px;
+    font-family: cinzel;
     
     
 }
@@ -47,7 +48,7 @@ body{
 .box1{
     margin-left: 590px;
     
-    background-color: beige;
+    background-color: rgba(245, 245, 220, 0.726);
     margin-top: -25px;
     width: 1px;
     font-size: 10px;
@@ -66,7 +67,8 @@ body{
     color: white;
     font-size: x-large;
     margin-bottom: -280px;
-    
+    font-family: cinzel;
+   
 
 }
 .box2{
@@ -75,6 +77,7 @@ body{
  margin-top: 80px;
  margin-bottom: 10px;
  font-size: 12px;
+ font-family: cinzel;
   
 }
 
@@ -94,6 +97,8 @@ body{
     justify-content: center;
 padding-top: 50px;
 padding-left: 65px;
+font-size: 25px;
+font-family: cinzel;
 }
 .box5{
     display: flex;
@@ -101,6 +106,7 @@ justify-content: space-around;
    padding-top: 30px;
    padding-left: 50px;
    padding-bottom: 40px;
+   font-family: cinzel;
   
 
 }
@@ -130,9 +136,9 @@ width: 650px;
 margin-left: 40px;
 margin-right: 100px;
 justify-content: flex-end;
-font-size: 15px;
+font-size: 18px;
 padding-top: 20px;
-font-family: arimo;
+font-family:  cinzel;
 
 }
 .section{
@@ -150,6 +156,7 @@ font-family: arimo;
     font-size: 10px;
     margin-top: -45px;
     margin-left: 35px;
+    font-family: cinzel;
     
    
     
@@ -197,6 +204,7 @@ margin-top: -50px;
     width: 650px;
     display: flex;
     margin-left: -280px;
+    font-family: cinzel;
 
 }
 .container8{
@@ -213,10 +221,10 @@ margin-top: -50px;
     margin-bottom: 30px;
 }
 .container10{
-    border: solid white 1px;
+    border: solid rgba(245, 245, 220, 0.726) 1px;
     height: 40px;
     width: 170px;
-    background-color:rgb(241, 247, 247);
+    background-color:rgba(245, 245, 220, 0.726);
     color: black;
     margin-left: 35px;
     padding-top: 12px;
@@ -252,6 +260,7 @@ margin-top: -50px;
     color: black;
     font-size: xx-large;
     margin-left: -320px;
+    font-family: cinzel;
 }
 .container14{
     display: flex;
@@ -263,6 +272,7 @@ margin-top: -50px;
     font-family: ruda;
     margin-left: 60px;
     cursor: pointer;
+    font-family: cinzel;
   }
     .container15{
         display: flex;
@@ -290,7 +300,7 @@ margin-top: -50px;
         width: 70px;
         margin-left: 390px;
         margin-top: -60px;
-        margin-bottom: 20px;
+        margin-bottom: 5px;
         cursor: pointer;
 
     }
