--- a/pro2/pro2.css
+++ b/pro2/pro2.css
@@ -277,7 +277,7 @@ margin-top: -50px;
     .container15{
         display: flex;
         justify-content: center;
-        background-color: beige;
+        background-color: white;
         margin-top: -35px;
         width: 1px;
         font-size: 10px;
@@ -298,7 +298,7 @@ margin-top: -50px;
         background-color: black;
         color: white;
         width: 70px;
-        margin-left: 390px;
+        margin-left: 387px;
         margin-top: -60px;
         margin-bottom: 5px;
         cursor: pointer;
